--- a/intro_to_ds/case0/FirstPeek.ipynb
+++ b/intro_to_ds/case0/FirstPeek.ipynb
@@ -96,10 +96,10 @@
       "execution_count": 23,
       "metadata": {
         "id": "MHxq921fSKcB",
-        "outputId": "87653faa-7c23-45fb-e4d9-9da472d43bd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "87653faa-7c23-45fb-e4d9-9da472d43bd8"
       },
       "outputs": [
         {
@@ -157,11 +157,11 @@
       "execution_count": 24,
       "metadata": {
         "id": "3Pl6Ka5ESKcB",
-        "outputId": "6ef4800e-ba3a-479f-f910-e6c8286ccf3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "outputId": "6ef4800e-ba3a-479f-f910-e6c8286ccf3a"
       },
       "outputs": [
         {
@@ -578,10 +578,10 @@
       "execution_count": 25,
       "metadata": {
         "id": "_yYgIJLsSKcB",
-        "outputId": "67f58b10-790f-46fa-945e-608964bf5d35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "67f58b10-790f-46fa-945e-608964bf5d35"
       },
       "outputs": [
         {
@@ -618,11 +618,11 @@
       "execution_count": 26,
       "metadata": {
         "id": "NNQU22kYSKcB",
-        "outputId": "27238eb2-9220-44f1-b91b-0d3ae53fddae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "outputId": "27238eb2-9220-44f1-b91b-0d3ae53fddae"
       },
       "outputs": [
         {
@@ -1134,11 +1134,11 @@
       "execution_count": 27,
       "metadata": {
         "id": "7YeW5TXiSKcC",
-        "outputId": "e4cf6e8e-964c-46c3-8914-ef668de27880",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 836
-        }
+        },
+        "outputId": "e4cf6e8e-964c-46c3-8914-ef668de27880"
       },
       "outputs": [
         {
@@ -1162,11 +1162,11 @@
       "execution_count": 28,
       "metadata": {
         "id": "IPZ_0y0TSKcC",
-        "outputId": "c1b60eaa-3698-4a27-90d9-38fe825271d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c1b60eaa-3698-4a27-90d9-38fe825271d8"
       },
       "outputs": [
         {
@@ -1210,10 +1210,10 @@
       "execution_count": 29,
       "metadata": {
         "id": "DhI2lkjpSKcC",
-        "outputId": "9977b99b-77a7-4b2d-e7dc-ba2b44929098",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9977b99b-77a7-4b2d-e7dc-ba2b44929098"
       },
       "outputs": [
         {
@@ -1248,11 +1248,11 @@
       "execution_count": 30,
       "metadata": {
         "id": "VlpGSpNMSKcC",
-        "outputId": "49cfd69c-8a66-4dc9-c21c-bd4df1f1a39f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "outputId": "49cfd69c-8a66-4dc9-c21c-bd4df1f1a39f"
       },
       "outputs": [
         {
@@ -1286,7 +1286,7 @@
       "source": [
         "by summing the distance from each point to the line, you get the mean squared error.\n",
         "\n",
-        "we want to keep the order low"
+        "we want to keep the regression line order low"
       ],
       "metadata": {
         "id": "fh-9O7bqbVZT"
@@ -1349,11 +1349,11 @@
       "execution_count": 34,
       "metadata": {
         "id": "KA2mKcgBSKcD",
-        "outputId": "d6234dd8-425f-41d7-f91d-3185b77a7231",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "outputId": "d6234dd8-425f-41d7-f91d-3185b77a7231"
       },
       "outputs": [
         {
@@ -1850,13 +1850,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "paaHtRbOSKcD",
-        "outputId": "2137ba55-d8b5-4af4-dcce-945053738b32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2137ba55-d8b5-4af4-dcce-945053738b32"
       },
       "outputs": [
         {
@@ -1866,6 +1866,16 @@
             "/usr/local/lib/python3.10/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
             "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7987c4a3bd30>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
         }
       ],
       "source": [
@@ -1884,22 +1894,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
-        "id": "H3jsgAynSKcE"
+        "id": "H3jsgAynSKcE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30427334-2e64-401f-c524-8bf0a0d70c40"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step\n"
+          ]
+        }
+      ],
       "source": [
         "y_pred = model.predict(X_test)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "_rgVmTuXSKcE"
+        "id": "_rgVmTuXSKcE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7b00a5d-2571-44cc-b812-897c2a5cd965"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE: 3245.4430197386905\n",
+            "R-sq: 0.4769570621044622\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.metrics import mean_squared_error, r2_score\n",
         "\n",
